# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = sushie
description = Perform SNP fine-mapping of complex traits across ancestries using SuShiE
author = Zeyun Lu, Nicholas Mancuso
author_email = zeyunlu@usc.edu, Nicholas.Mancuso@med.usc.edu
license = MIT
license_files = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/mancusolab/sushie
# Add here related links, for example:
project_urls =
    Source = https://github.com/mancusolab/sushie
    Tracker = https://github.com/mancusolab/sushie/issues

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = Mac,Linux

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    jax
    scipy
    jaxlib
    pandas>=1.1.3
    pandas-plink
    limix==3.0.3 # latest version has issues

[options.packages.find]
exclude =
    tests

[options.entry_points]
# Add here console scripts like:
console_scripts =
    sushie = sushie.cli:run_cli

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
addopts =
    --cov sushie --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 120
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.1.1
package = sushie
